// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskAdminMode renders correctly 1`] = `
<body>
  <div>
     
    
  </div>
</body>
`;

exports[`TaskAdminMode renders correctly with previous scores 1`] = `
<body>
  <div>
    <div
      class="notification-container"
    >
      <div
        class="notification-wrapper button-fill alert"
      >
        <svg
          aria-hidden="true"
          class="icon medium"
          viewBox="0 0 16 16"
        >
          <title>
            Lightning bolt icon
          </title>
          <path
            d="M8 0h4.08L9 6h4L5 16l2-7H4l4-9z"
          />
        </svg>
         
        <div
          aria-live="assertive"
          class="notification-content"
        >
          <div
            class="notification-text"
          >
            <span
              class="notification-heading ui-heading"
            >
              Review needed
            </span>
             
            <span
              class="notification-body"
            >
              Suspected of cheating
            </span>
            
          </div>
           
        </div>
         
      </div>
    </div>
     
    <div
      class="summary-container"
    >
      <h3>
        Standard scores
      </h3>
       
      <ul
        class="summary-block"
      >
        <li
          class="summary-item"
        >
          <span
            class="summary-label"
          >
            Maria
          </span>
           
          <span
            class="summary-value"
          >
            2 - Suspected of cheating
          </span>
           
        </li>
        <li
          class="summary-item"
        >
          <span
            class="summary-label"
          >
            My final score
          </span>
           
          <span
            class="summary-value"
          >
            -
          </span>
           
        </li>
      </ul>
       
    </div>
     
    <div
      class="tabs"
    >
      <div
        class="tabgroup"
      >
         
        <div
          class="scrollbox"
        >
          <ul
            role="tablist"
          >
            <li
              role="presentation"
            >
              <button
                aria-current="true"
                aria-selected="true"
                role="tab"
              >
                <span
                  class="icon-container"
                >
                  <svg
                    aria-hidden="true"
                    class="icon medium"
                    viewBox="0 0 16 16"
                  >
                    <title>
                      Lightning bolt icon
                    </title>
                    <path
                      d="M8 0h4.08L9 6h4L5 16l2-7H4l4-9z"
                    />
                  </svg>
                </span>
                 
                Maria
                 
              </button>
               
            </li>
            <li
              role="presentation"
            >
              <button
                aria-current="true"
                aria-selected="true"
                role="tab"
              >
                 
                My final score
                 
              </button>
               
            </li>
          </ul>
          <iframe
            aria-hidden="true"
            src="about:blank"
            style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
            tabindex="-1"
          />
        </div>
         
      </div>
    </div>
    
  </div>
</body>
`;

exports[`TaskAdminMode renders correctly without previous scores when read only 1`] = `
<body>
  <div>
    <div
      class="notification-container"
    >
      <div
        class="notification-wrapper button-fill alert"
      >
        <svg
          aria-hidden="true"
          class="icon medium"
          viewBox="0 0 16 16"
        >
          <title>
            Lightning bolt icon
          </title>
          <path
            d="M8 0h4.08L9 6h4L5 16l2-7H4l4-9z"
          />
        </svg>
         
        <div
          aria-live="assertive"
          class="notification-content"
        >
          <div
            class="notification-text"
          >
            <span
              class="notification-heading ui-heading"
            >
              Review needed
            </span>
             
            <span
              class="notification-body"
            >
              Suspected of cheating
            </span>
            
          </div>
           
        </div>
         
      </div>
    </div>
     
     
    <div
      class="tabs"
    >
      <div
        class="tabgroup"
      >
         
        <div
          class="scrollbox"
        >
          <ul
            role="tablist"
          >
            <li
              role="presentation"
            >
              <button
                aria-current="true"
                aria-selected="true"
                role="tab"
              >
                <span
                  class="icon-container"
                >
                  <svg
                    aria-hidden="true"
                    class="icon medium"
                    viewBox="0 0 16 16"
                  >
                    <title>
                      Lightning bolt icon
                    </title>
                    <path
                      d="M8 0h4.08L9 6h4L5 16l2-7H4l4-9z"
                    />
                  </svg>
                </span>
                 
                Maria
                 
              </button>
               
            </li>
            <li
              role="presentation"
            >
              <button
                aria-current="true"
                aria-selected="true"
                role="tab"
              >
                 
                My final score
                 
              </button>
               
            </li>
          </ul>
          <iframe
            aria-hidden="true"
            src="about:blank"
            style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
            tabindex="-1"
          />
        </div>
         
      </div>
    </div>
    
  </div>
</body>
`;
